# ChangeLog for app-misc/ktoblzcheck
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ChangeLog,v 1.35 2006/09/08 15:04:06 hanno Exp $

  08 Sep 2006; Hanno Boeck <hanno@gentoo.org> metadata.xml:
  Add myself as maintainer.

  06 Sep 2006; Joshua Jackson <tsunam@gentoo.org> ktoblzcheck-1.10.ebuild:
  Stable x86; bug #146142

*ktoblzcheck-1.10 (22 Mar 2006)

  22 Mar 2006; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.10.ebuild:
  Version bump.

  06 Feb 2006; Aron Griffis <agriffis@gentoo.org> ktoblzcheck-1.7.ebuild:
  Mark 1.7 stable on alpha

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> ktoblzcheck-1.7.ebuild:
  Mark 1.7 stable on ia64

*ktoblzcheck-1.9 (17 Jan 2006)

  17 Jan 2006; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.9.ebuild:
  Version bump.

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org>
  ktoblzcheck-1.7.ebuild:
  Stable on ppc.

*ktoblzcheck-1.8 (28 Nov 2005)

  28 Nov 2005; Hanno Boeck <hanno@gentoo.org>
  +files/ktoblzcheck-1.8-gcc41.patch, +ktoblzcheck-1.8.ebuild:
  Version bump and fix for gcc 4.1.

  28 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  ktoblzcheck-1.7.ebuild:
  Stable on sparc

  26 Nov 2005; Simon Stelling <blubb@gentoo.org> ktoblzcheck-1.7.ebuild:
  mark stable on amd64

  26 Nov 2005; Mark Loeser <halcy0n@gentoo.org> ktoblzcheck-1.7.ebuild:
  Stable on x86; bug #113175

  11 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  ktoblzcheck-1.2.ebuild:
  Stable on sparc wrt #111738

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> ktoblzcheck-1.2.ebuild:
  Mark 1.2 stable on ia64

*ktoblzcheck-1.7 (13 Sep 2005)

  13 Sep 2005; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.7.ebuild:
  Version bump.

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org> ktoblzcheck-1.2.ebuild:
  Mark 1.2 stable on alpha

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> ktoblzcheck-1.2.ebuild:
  add ~ia64
