@@ -6,6 +6,7 @@ MD5 6b6ea9d7b2f67f64ddf9027077b1f3ed files/ktoblzcheck-1.8-gcc41.patch 649
 RMD160 235c2f197626eed2328e2f9e4b58f671e22d0498 files/ktoblzcheck-1.8-gcc41.patch 649
 SHA256 14f3a4ab22a6b99d2cd687e60d2d18af5ca5e81dce30881dde1720513e7a8784 files/ktoblzcheck-1.8-gcc41.patch 649
 DIST ktoblzcheck-1.10.tar.gz 448091 RMD160 fc849482adcae21e60493f55baf9c4869072788e SHA1 159f17463039a58fdfd70e13c586cca5b5bc0a92 SHA256 3ece91bc5273e5cd5dce52cd2212fac4eaf60090dc184f6c6b1b0f6078483b4b
+DIST ktoblzcheck-1.11.tar.gz 448354 RMD160 89fa98d327c2665df3f6f6fddd92100c532585ca SHA1 4bde83a30c31e50527bc0c6d501b578d7e277026 SHA256 2b4776629f49eba6696c877ddb6f5c60faa425271ee28a1d497c1a4a7953ea37
 DIST ktoblzcheck-1.7.tar.gz 443469
 DIST ktoblzcheck-1.8.tar.gz 444335
 DIST ktoblzcheck-1.9.tar.gz 444674
@@ -13,6 +14,10 @@ EBUILD ktoblzcheck-1.10.ebuild 738 RMD160 36de8c30f647a98474a3209a75d6ae88b01802
 MD5 30fc0c03759ecf52f05e793cc28b578c ktoblzcheck-1.10.ebuild 738
 RMD160 36de8c30f647a98474a3209a75d6ae88b0180273 ktoblzcheck-1.10.ebuild 738
 SHA256 04a184a3b6b0fd97e93e005661bfbc5580cd703a14975ba7e0b34c8afc1599c0 ktoblzcheck-1.10.ebuild 738
+EBUILD ktoblzcheck-1.11.ebuild 672 RMD160 b19a137882904b0c6ed17a896405184638248c31 SHA1 01592c82c10818169a7da4fcb19dfea4957cb020 SHA256 b6e751b0cadeafa374ca03036c7e7ce360f82661e4f8c1b6d2adf5a96de1eeb9
+MD5 36780e254d7d84d1e3ca0af8a755f570 ktoblzcheck-1.11.ebuild 672
+RMD160 b19a137882904b0c6ed17a896405184638248c31 ktoblzcheck-1.11.ebuild 672
+SHA256 b6e751b0cadeafa374ca03036c7e7ce360f82661e4f8c1b6d2adf5a96de1eeb9 ktoblzcheck-1.11.ebuild 672
 EBUILD ktoblzcheck-1.7.ebuild 671 RMD160 8f69e26990c7a6d231ac74b86761e600ec277de6 SHA1 d1b414f701a233ce8f4f8ea8aa44d3bbd68226ce SHA256 1531da2075e7b165ca1108b79546f950ceb4787cb6192561e3b3d25e1d137ef7
 MD5 19ce50f3e0ff3dba849f890f766617ff ktoblzcheck-1.7.ebuild 671
 RMD160 8f69e26990c7a6d231ac74b86761e600ec277de6 ktoblzcheck-1.7.ebuild 671
@@ -25,10 +30,10 @@ EBUILD ktoblzcheck-1.9.ebuild 737 RMD160 c7d5dd20d4b1707c04eaf89e2b4fbacb752585f
 MD5 56a1cd7599cf2d4051cff2416a514e6f ktoblzcheck-1.9.ebuild 737
 RMD160 c7d5dd20d4b1707c04eaf89e2b4fbacb752585fa ktoblzcheck-1.9.ebuild 737
 SHA256 5337796323b3b5f0edddac626406c7d7bc1fb2a7a04db2ce47cc78252cec7668 ktoblzcheck-1.9.ebuild 737
-MISC ChangeLog 3943 RMD160 30633a6f1808edd4273813d65f8d4fdb1085fe1d SHA1 536e806da6f39dbb104bbecc185cb9303607b098 SHA256 203834f5d3b81247fa681705db20c00180157e5b4f69e01899d98b244527df8d
-MD5 7abdce6e608d3598f2f1726b9477fdbf ChangeLog 3943
-RMD160 30633a6f1808edd4273813d65f8d4fdb1085fe1d ChangeLog 3943
-SHA256 203834f5d3b81247fa681705db20c00180157e5b4f69e01899d98b244527df8d ChangeLog 3943
+MISC ChangeLog 4065 RMD160 7d94c6664553074603a7bb3c50b3c82dd07b5525 SHA1 2fd10d0bc2701ddfa13dfb1687bfe8bbabca6c3c SHA256 f2ab62e749bef022964c84ce67ced6eb40dcd821e4ec80e6c8388ff8fd7d98e8
+MD5 138b8e640b14fe523ca688dc0e4dc10f ChangeLog 4065
+RMD160 7d94c6664553074603a7bb3c50b3c82dd07b5525 ChangeLog 4065
+SHA256 f2ab62e749bef022964c84ce67ced6eb40dcd821e4ec80e6c8388ff8fd7d98e8 ChangeLog 4065
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 metadata.xml 217
@@ -36,6 +41,9 @@ SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669 metadata
 MD5 c572d9cdef093dac520033f1b0ad2db1 files/digest-ktoblzcheck-1.10 250
 RMD160 b19777b22d5e1b7f5def4259ba18078ae88b0808 files/digest-ktoblzcheck-1.10 250
 SHA256 d8f0c02537b2dd15ef3820468727a7e6c3f0f96119ced9006ef0ab1aad6ef406 files/digest-ktoblzcheck-1.10 250
+MD5 7053b7f972a585d07942d9abfb26a300 files/digest-ktoblzcheck-1.11 250
+RMD160 0f0936a6f1312a9336ce88ed31a979d3964973ea files/digest-ktoblzcheck-1.11 250
+SHA256 bebf35fd5296468e7f9bdb493b23fd5c6bdd013bec58c28b9991af93597c3c37 files/digest-ktoblzcheck-1.11 250
 MD5 7cbeecef2ba27e6185335d102bd5297a files/digest-ktoblzcheck-1.7 67
 RMD160 351fdbab217d668dd861379bdbbe12dd53c37af1 files/digest-ktoblzcheck-1.7 67
 SHA256 d13443aa1cee3a582d61f384137cb1a11c1db1b01052f48992c0e58d3037d780 files/digest-ktoblzcheck-1.7 67
@@ -48,7 +56,7 @@ SHA256 d81257a119ba45587e34d146647fe2ca6b29ffafc590adfa48807756d15694c9 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFFAYaKr2QksT29OyARAvVMAJ0bWnGKVBZnUpZr69xi8bwjQDsuMACfYpy7
-E1RcQzJdQ0QOhUFUdqxmTS8=
-=3O+b
+iD8DBQFFAZq/r2QksT29OyARAqAEAJ4rVMgAqWhPizOsoRozxMy9M9v3gQCcD2tz
+fWBGn+2l5HZ7hfhsX7B5Ooo=
+=GYOW
 -----END PGP SIGNATURE-----
