@@ -1,0 +1,3 @@
+MD5 76341845a4b4b00a9abbf8ee5bcadc51 ktoblzcheck-1.11.tar.gz 448354
+RMD160 89fa98d327c2665df3f6f6fddd92100c532585ca ktoblzcheck-1.11.tar.gz 448354
+SHA256 2b4776629f49eba6696c877ddb6f5c60faa425271ee28a1d497c1a4a7953ea37 ktoblzcheck-1.11.tar.gz 448354
