@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/ktoblzcheck
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ChangeLog,v 1.35 2006/09/08 15:04:06 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ChangeLog,v 1.36 2006/09/08 16:30:13 hanno Exp $
+
+*ktoblzcheck-1.11 (08 Sep 2006)
+
+  08 Sep 2006; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.11.ebuild:
+  Version bump.
 
   08 Sep 2006; Hanno Boeck <hanno@gentoo.org> metadata.xml:
   Add myself as maintainer.
